--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-xl" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="#top">INICIO</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="false">¿QUE OFRECEMOS?</a><div class="dropdown-menu"><a class="dropdown-item" href="index.html#header11-3">Website</a><a class="dropdown-item" href="index.html#features10-e">Analítica Web</a><a class="dropdown-item" href="index.html#features14-6">Fotofrafía Profesional</a><a class="dropdown-item" href="index.html#features10-e" aria-expanded="false">Video Profesional</a><a class="dropdown-item" href="index.html#features10-4">Relaciones Públicas</a></div></li><li class="nav-item dropdown"><a class="nav-link link" href="index.html#form1-9" aria-expanded="false">CONTÁCTANOS</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-xl" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="#top">INICIO</a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="true">¿QUE OFRECEMOS?</a><div class="dropdown-menu"><a class="dropdown-item" href="index.html#header11-3">Website</a><a class="dropdown-item" href="index.html#features10-e">Analítica Web</a><a class="dropdown-item" href="index.html#features14-6">Fotofrafía Profesional</a><a class="dropdown-item" href="index.html#features10-e" aria-expanded="false">Video Profesional</a></div></li><li class="nav-item dropdown"><a class="nav-link link" href="index.html#form1-9" aria-expanded="false">CONTÁCTANOS</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -69,7 +69,7 @@
                 <div class="mbr-section row">
                     <div id="title">
                         <div class="span-title">
-                            <h1 class="mbr-section-title display-1 text-center pad-r">WKREATIVE &nbsp;<br></h1>
+                            <h1 class="mbr-section-title display-1 text-center pad-r">WKREATIVE &nbsp;es<br></h1>
                             <h1 class="mbr-section-title display-1 element typedheader11-3" adress="typedheader11-3" firstel="INNOVACIÓN" secondel="TECNOLOGÍA" thirdel="CREATIVIDAD" typespeed="60">
                             </h1>
                         </div>
@@ -77,7 +77,7 @@
                             <p>Creative Media Solutions</p>
                          </div>
 
-                        <div class="mbr-section-btn text-center"><a class="btn btn-primary" href="https://mobirise.com">CONOCE</a></div>
+                        <div class="mbr-section-btn text-center"><a class="btn btn-primary" href="https://mobirise.com">Ver</a></div>
 
                     </div>
                 </div> 
@@ -109,7 +109,7 @@
 
                     <div class="clearfix"></div>
                     
-                    <ul class="nav nav-tabs" role="tablist"><li class="nav-item" style="display: block;"><a class="nav-link active" role="tab" data-toggle="tab" href="#tab1header9-2" aria-expanded="false">ResponsivO</a></li><li class="nav-item" style="display: block;"><a class="nav-link" role="tab" data-toggle="tab" href="#tab2header9-2" aria-expanded="false">SEO</a></li><li class="nav-item" style="display: block;"><a class="nav-link text-black" role="tab" data-toggle="tab" href="#tab3header9-2" aria-expanded="true">Estrategia Digital</a></li><li class="nav-item" style="display: block;"></li><li class="nav-item" style="display: none;"></li><li class="nav-item" style="display: none;"></li><li class="nav-item" style="display: none;"></li><li class="nav-item" style="display: none;"></li><li class="nav-item" style="display: none;"><a class="nav-link" role="tab" data-toggle="tab" href="#tab4header9-2">Awesome</a></li><li class="nav-item" style="display: none;"><a class="nav-link" role="tab" data-toggle="tab" href="#tab5header9-2">Amazing</a></li><li class="nav-item" style="display: none;"><a class="nav-link" role="tab" data-toggle="tab" href="#tab6header9-2">Beautiful</a></li></ul>
+                    <ul class="nav nav-tabs" role="tablist"><li class="nav-item" style="display: block;"><a class="nav-link active" role="tab" data-toggle="tab" href="#tab1header9-2" aria-expanded="false">ResponsivO</a></li><li class="nav-item" style="display: block;"><a class="nav-link" role="tab" data-toggle="tab" href="#tab2header9-2" aria-expanded="true">SEO</a></li><li class="nav-item" style="display: block;"><a class="nav-link text-black" role="tab" data-toggle="tab" href="#tab3header9-2" aria-expanded="false">Estrategia Digital</a></li><li class="nav-item" style="display: block;"></li><li class="nav-item" style="display: none;"></li><li class="nav-item" style="display: none;"></li><li class="nav-item" style="display: none;"></li><li class="nav-item" style="display: none;"></li><li class="nav-item" style="display: none;"><a class="nav-link" role="tab" data-toggle="tab" href="#tab4header9-2">Awesome</a></li><li class="nav-item" style="display: none;"><a class="nav-link" role="tab" data-toggle="tab" href="#tab5header9-2">Amazing</a></li><li class="nav-item" style="display: none;"><a class="nav-link" role="tab" data-toggle="tab" href="#tab6header9-2">Beautiful</a></li></ul>
 
                 </div>
 
@@ -423,7 +423,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTÁCTANOS">
 
-                        <input type="hidden" value="KA1gq26UtnfpOEBwoC+AWtR8vUqduDC268CqJfNoVQ/gF4oj91mJmXlq88aX1lTqZtO8Aoe99ACP+8Rzio/BSFzf/7vjzRRbSRB4lU4dDtoij45UXveH4nizevLXbJiQ" data-form-email="true">
+                        <input type="hidden" value="acE71winluMOcpyRUMHgROdIlp3h38mGLQUyTzx/Yqs93iWw77woQVk0r6yYkkih3J5hzxQUPFUv2rGTkkCFa3bysxCSzeqbyV/91HvHb6Dg6FWNhXhlHX/ojIXk/xCr" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -476,7 +476,7 @@
         <div class="col-xs-12 col-lg-10 col-lg-offset-1">
             
             <div class="col-xs-12 col-lg-5 footer-list-2 table-cell-lg table-cell-middle">
-                    <p class="mbr-section-subtitle display-3 text-xs-center text-lg-left">© COPYRIGHT 2016</p>
+                    <p class="mbr-section-subtitle display-3 text-xs-center text-lg-left">WKREATIVE © COPYRIGHT 2016</p>
             </div>
 
             <div class="col-xs-12 col-lg-3 text-xs-center text-lg-left table-cell-lg table-cell-middle">
@@ -491,7 +491,7 @@
 
               <form action="https://mobirise.com/" method="post" data-form-title="UNTITLED FORM">
 
-                  <input type="hidden" value="osSzapDGHLgs1YZs39rfhc0bSW871lN1RvkdTCpPlkLZ1/Mp3EVMp/Sa+xSarq57EhxS8fZZdXO4s/w6pEaKNDGYSUGPYXba0mbBRr+xcInBgXmlDuSI/6LWKbgzQLXT" data-form-email="true">
+                  <input type="hidden" value="4V10tbti7JYWYzRENIa/vKSYX2rL9BqeNJW8owpm/c/zdk4fZUe4a2WVpLQTkxhhTRd6s4iE4JTYa3NDaWgJqVfOCxufWLXQelh60W0Y5BBVTsexhhCBXQHTBMYeQ0OG" data-form-email="true">
 
                   <div class="form-inner">
 
