--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <div class="mbr-section row">
                     <div id="title">
                         <div class="span-title">
-                            <h1 class="mbr-section-title display-1 text-center pad-r">WKREATIVE &nbsp;es<br></h1>
+                            <h1 class="mbr-section-title display-1 text-center pad-r">¿WKREATIVE ?<br></h1>
                             <h1 class="mbr-section-title display-1 element typedheader11-3" adress="typedheader11-3" firstel="INNOVACIÓN" secondel="TECNOLOGÍA" thirdel="CREATIVIDAD" typespeed="60">
                             </h1>
                         </div>
@@ -99,7 +99,7 @@
 
                     <h1 class="mbr-section-title display-1"><span style="line-height: 1.12em;">¿Que conseguir con nosotros?</span><br></h1>
 
-                    <p class="mbr-section-text lead header-text">Todo lo que necesitas para que mostra la mejor impresion de tu negocio en internet.</p>
+                    <p class="mbr-section-text lead header-text">Todo lo que necesitas para que mostrar tu negocio en internet.</p>
 
                 </div>
             </div>
@@ -450,7 +450,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTÁCTANOS">
 
-                        <input type="hidden" value="usRyk+5YLu+OhKw5eBCGM8RbwNzBacUDGsMEGx/VkkaVLAZeFU6P2L5BaZ+G9xp73EudkCt33oIkKtU36TBIagJtg2Ol7JX2OYCSTOc93eZU0yYIhhFnep4ScxTO1PmO" data-form-email="true">
+                        <input type="hidden" value="wcwGns+1/gZnQrSDcPEwmsKmaHROyP+p6/DUmRSgAGGFRVh9MQWHbDfuj7xY0JStjOosHZhnNh8+h9lFcd1QBG6QizEA4vPc7J/4u4xDtUmCEc5YD4QdeQOmE2ULG5x/" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -518,7 +518,7 @@
 
               <form action="https://mobirise.com/" method="post" data-form-title="UNTITLED FORM">
 
-                  <input type="hidden" value="BG5e31F9pz2gkz4DPbP6XDCziLdqdcrmAoNXjgMGT6qK4SrG6fI2UtPTAnW7dCFzLCbIdi82VfbSsWR/djfCx0zkChMime3rCSQVALp/kF9uJLmJFkHHJcfxpt8adHuO" data-form-email="true">
+                  <input type="hidden" value="e+Eyl7vKVOLS7d1NDQPj38q1EEFfbPLuUWRzRoSOJZX3zMJeeHhzlqQrytHMSuCtSCPql/1QysmZx0EQIZXuRCnRKDS2DsuB/I4HmpvLrKZAS4HF1NZrvlgIV/xuo3At" data-form-email="true">
 
                   <div class="form-inner">
 
