--- a/EntrevistaaCristobalColonLoquepasohace523anos.html
+++ b/EntrevistaaCristobalColonLoquepasohace523anos.html
@@ -27,7 +27,7 @@
   
 </head>
 <body>
-<section class="mbr-section content5 mbr-parallax-background" id="content5-k" style="background-image: url(assets/images/coln-llega-a-pr-2000x1167-24.png); padding-top: 120px; padding-bottom: 120px;">
+<section class="mbr-section content5 mbr-parallax-background" id="content5-k" style="background-image: url(assets/images/entrevista-a-cristbal-coln-lo-que-pas-hace-523-aos-2000x1125-19.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(0, 0, 0);">
     </div>
@@ -73,7 +73,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section-md-padding social-buttons1 mbr-background" id="social-buttons1-p" style="background-image: url(assets/images/share-1-2000x2000-45.png); padding-top: 90px; padding-bottom: 90px;">
+<section class="mbr-section mbr-section-md-padding social-buttons1 mbr-background" id="social-buttons1-p" style="background-image: url(assets/images/entrevista-a-cristbal-coln-lo-que-pas-hace-523-aos-2000x1125-39.jpg); padding-top: 90px; padding-bottom: 90px;">
     <div class="mbr-overlay" style="opacity: 0.4; background-color: rgb(51, 51, 51);">
     </div>
     <div class="container-fluid">
